# core-wars

./: README.md  core-wars.cabal  tests.md
examples/: program2.txt
src/: DataTypes.hs  Main.hs  MyRealMain.hs  Parsing.hs  RedCode.hs  Warrior.hs  program1.txt  program2.txt
src/examples/: program1.txt
src/tests/: test-add.txt  test-autodecrement.txt  test-cmp-equal.txt  test-dat.txt  test-djn-no-jump.txt  test-immediate.txt  test-indirect.txt  test-jmn-jump.txt  test-jmz-jump.txt  test-jmz-no-jump.txt  test-mov-no-immediate.txt  test-mov.txt  test-spl.txt
tests/: test-cmp-not-equal.txt  test-direct.txt  test-djn-jump.txt  test-immediate.txt  test-jmn-no-jump.txt  test-jmp.txt  test-jmz-no-jump.txt  test-mov-no-immediate.txt  test-sub.txt
